kubernetes/applications/infra/auth/pocketid/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocketid
spec:
  parentRefs:
    - name: public
      namespace: infra-gateway
  hostnames:
    - 'auth.${CLUSTER_DOMAIN}'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pocketid
          port: 80
